--- a/styles/main.scss
+++ b/styles/main.scss
@@ -3,10 +3,14 @@
 
 
 body {
+
   background-color: lavenderblush;
-  color: brown;
+  color: mediumpurple;
   text-align: center;
   margin-top: 100px;
+  background-image: url('https://assets.awwwards.com/awards/images/2019/03/old-web-3-2.jpg');
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 
@@ -23,7 +27,7 @@ body {
 }
 
 .navbar-lavender .navbar-brand {
-  font-family: "arial", cursive !important;
+  font-family: "courier-new", !important;
   color: lightpink;
   font-weight: 900;
   font-size: 2em;
@@ -89,6 +93,7 @@ body {
     .card {
       width: 300px;
       margin: 5px;
+      height: 430px;
       }
 
     }
@@ -98,6 +103,10 @@ body {
     .card-header {
       justify-content: center;
       background-color: lavender;
+    }
+
+    .card-body {
+      height: 50%;
     }
 
   }
@@ -110,6 +119,37 @@ body {
     justify-content: center;
   }
 
-  .google-auth {
+  .btn-outline {
     background-color: lightpink;
+    font-family:'Courier New', Courier, monospace;
   }
+
+  .btn-outline:hover{
+    background-color: palevioletred;
+    color: black;
+    font-family: 'Courier New', Courier, monospace;
+  }
+.form-group{
+  background-color: lavender;
+}
+.btn-view{
+  background-color: plum;
+  font-family: 'Courier New', Courier, monospace;
+}
+.btn-view:hover{
+  background-color: lavender;
+}
+.btn-edit{
+  background-color: lightcoral;
+  font-family: 'Courier New', Courier, monospace;
+}
+.btn-edit:hover{
+  background-color: lavender;
+}
+.btn-delete{
+  background-color: mediumvioletred;
+  font-family: 'Courier New', Courier, monospace;
+}
+.btn-delete:hover{
+  background-color: lavender;
+}
